# blog-gen

./: Cargo.toml
posts/: example_markdown_post.md
src/: main.rs  posts.rs
