[package]
name = "blog_gen"
version = "0.1.0"
authors = ["Zachary E Sohovich <zach@sneakycrow.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.2.9"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
comrak = "0.6"